@@ -23,7 +23,7 @@
 /*
  * Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)afm.h	1.18 (gritter) 12/20/05
+ * Sccsid @(#)afm.h	1.19 (gritter) 12/21/05
  */
 
 #ifndef	TROFF_AFM_H
@@ -73,6 +73,8 @@ extern struct afmtab {
 	short	*codetab;
 	short	*fitab;
 	char	**nametab;
+	int	*unitab;
+	int	nunitab;
 	struct namecache	*namecache;
 	int	nameprime;
 	struct kernpair	*kernpairs;
