@@ -7,16 +7,16 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	5.50 (gritter) 12/20/05";
+	"@(#)/usr/ucb/otfdump.sl	5.51 (gritter) 12/21/05";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  5.50 (gritter) 12/20/05";
-const char creator[] = "Heirloom Documentation Tools - dpost 5.50 (gritter) 12/20/05";
+static const char sccsid[] USED = "@(#)dpost.sl  5.51 (gritter) 12/21/05";
+const char creator[] = "Heirloom Documentation Tools - dpost 5.51 (gritter) 12/21/05";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.50 (gritter) 12/20/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	5.51 (gritter) 12/21/05";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.50 (gritter) 12/20/05";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	5.51 (gritter) 12/21/05";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "5.50";
+const char revision[] = "5.51";
 /* SLIST */
 /*
 calloc.c: * Sccsid @(#)calloc.c	1.3 (gritter) 8/26/05
@@ -41,15 +41,15 @@ nroff.d/n6.c: * Sccsid @(#)n6.c	1.26 (gritter) 12/20/05
 nroff.d/proto.h: * Sccsid @(#)proto.h	1.28 (gritter) 12/20/05
 nroff.d/tw.h: * Sccsid @(#)tw.h	1.5 (gritter) 9/8/05
 troff.d/afm.c: * Sccsid @(#)afm.c	1.40 (gritter) 12/20/05
-troff.d/afm.h: * Sccsid @(#)afm.h	1.18 (gritter) 12/20/05
+troff.d/afm.h: * Sccsid @(#)afm.h	1.19 (gritter) 12/21/05
 troff.d/dev.h: * Sccsid @(#)dev.h	1.9 (gritter) 12/6/05
 troff.d/draw.c: * Sccsid @(#)draw.c	1.3 (gritter) 8/8/05
 troff.d/makedev.c: * Sccsid @(#)makedev.c	1.11 (gritter) 12/6/05
-troff.d/otf.c: * Sccsid @(#)otf.c	1.35 (gritter) 12/20/05
+troff.d/otf.c: * Sccsid @(#)otf.c	1.36 (gritter) 12/21/05
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.11 (gritter) 12/20/05
 troff.d/proto.h: * Sccsid @(#)proto.h	1.35 (gritter) 12/20/05
 troff.d/t10.c: * Sccsid @(#)t10.c	1.57 (gritter) 12/20/05
-troff.d/t6.c: * Sccsid @(#)t6.c	1.110 (gritter) 12/20/05
+troff.d/t6.c: * Sccsid @(#)t6.c	1.111 (gritter) 12/21/05
 troff.d/troff.h: * Sccsid @(#)troff.h	1.19 (gritter) 12/20/05
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.10 (gritter) 12/3/05
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.1 (gritter) 8/17/05
